--- a/src/prometheus_alert_rules/postgresql_rules.yaml
+++ b/src/prometheus_alert_rules/postgresql_rules.yaml
@@ -15,9 +15,10 @@ groups:
       annotations:
         summary: PostgresSQL down (instance {{ $labels.instance }})
         description: |
-        PostgresSQL instance is down. If you are not upgrading or configuring cross-region async replication clusters, please check for errors on Loki logs.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgresSQL instance is down.
+          If you are not upgrading or configuring cross-region async replication clusters, check for errors in the Loki logs.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.2
     # critical -> info
@@ -29,9 +30,10 @@ groups:
       annotations:
         summary: PostgresSQL restarted (instance {{ $labels.instance }})
         description: |
-        PostgresSQL restarted. If you are not enabling/disabling TLS or upgrading or configuring cross-region async replication clusters, please check for errors on Loki logs.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgresSQL restarted. 
+          If you are not enabling/disabling TLS or upgrading or configuring cross-region async replication clusters, check for errors in the Loki logs.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.3
     - alert: PostgresqlExporterError
@@ -42,10 +44,10 @@ groups:
       annotations:
         summary: PostgresSQL exporter error (instance {{ $labels.instance }})
         description: |
-        PostgresSQL exporter is showing errors.
-        A query may be buggy in query.yaml
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgresSQL exporter is showing errors.
+          There may be a buggy query in query.yaml
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.4
     # 10 days -> 7 days
@@ -57,9 +59,10 @@ groups:
       annotations:
         summary: PostgresSQL table not auto vacuumed (instance {{ $labels.instance }})
         description: |
-        Table {{ $labels.relname }} has not been auto vacuumed for 7 days. Please double-check your VACUUM settings.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          Table {{ $labels.relname }} has not been auto vacuumed for 7 days.
+          Double-check your VACUUM settings.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.5
     # 10 days -> 7 days
@@ -71,9 +74,10 @@ groups:
       annotations:
         summary: PostgresSQL table not auto analyzed (instance {{ $labels.instance }})
         description: |
-        Table {{ $labels.relname }} has not been auto analyzed for 7 days. Please double-check your AUTOVACUUM ANALYZE settings.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          Table {{ $labels.relname }} has not been auto analyzed for 7 days.
+          Double-check your AUTOVACUUM ANALYZE settings.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.6
     - alert: PostgresqlTooManyConnections
@@ -84,9 +88,10 @@ groups:
       annotations:
         summary: PostgresSQL too many connections (instance {{ $labels.instance }})
         description: |
-        PostgreSQL instance has too many connections (> 80%). Consider double-checking how many connections the client application is opening and/or using PgBouncer in front of the database.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgreSQL instance has too many connections (> 80%).
+          Consider double-checking how many connections the client application is opening, or using PgBouncer in front of the database.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.7
     # warning -> info
@@ -98,9 +103,10 @@ groups:
       annotations:
         summary: PostgresSQL not enough connections (instance {{ $labels.instance }})
         description: |
-        PostgreSQL instance should have more connections (> 5). Consider double-checking how many connections the client application is opening and/or using PgBouncer in front of the database.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgreSQL instance should have more connections (> 5).
+          Consider double-checking how many connections the client application is opening and/or using PgBouncer in front of the database.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.8
     - alert: PostgresqlDeadLocks
@@ -111,9 +117,10 @@ groups:
       annotations:
         summary: PostgresSQL dead locks (instance {{ $labels.instance }})
         description: |
-        PostgreSQL has dead-locks. More details can be obtained through the pg_locks view.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgreSQL has dead-locks.
+          See more details with the pg_locks view.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.9
     - alert: PostgresqlHighRollbackRate
@@ -124,9 +131,10 @@ groups:
       annotations:
         summary: PostgresSQL high rollback rate (instance {{ $labels.instance }})
         description: |
-        Ratio of transactions being aborted compared to committed is > 2 %. This issue is probably happening due to unoptimized configurations related to commit delay, connections, memory and WAL files.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          Ratio of transactions being aborted compared to committed is > 2 %.
+          This is probably happening due to unoptimized configurations related to commit delay, connections, memory, and WAL files.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.10
     # critical -> info
@@ -138,9 +146,10 @@ groups:
       annotations:
         summary: PostgresSQL commit rate low (instance {{ $labels.instance }})
         description: |
-        PostgresSQL seems to be processing very few transactions. Please check for long-running queries and configuration issues, like not enough cache size.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgresSQL seems to be processing very few transactions.
+          Please check for long-running queries and configuration issues, like insufficient cache size.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.11
     # warning -> info
@@ -152,9 +161,10 @@ groups:
       annotations:
         summary: PostgresSQL low XID consumption (instance {{ $labels.instance }})
         description: |
-        PostgresSQL seems to be consuming transaction IDs very slowly. Please run ANALYZE to update the optimizer statistics, ensuring that query plans are correct, and double-check your VACUUM settings.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgresSQL seems to be consuming transaction IDs very slowly.
+          Run ANALYZE to update the optimizer statistics, ensure that query plans are correct, and double-check your VACUUM settings.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.12
     - alert: PostgresqlHighRateStatementTimeout
@@ -165,9 +175,10 @@ groups:
       annotations:
         summary: PostgresSQL high rate statement timeout (instance {{ $labels.instance }})
         description: |
-        PostgresSQL transactions showing high rate of statement timeouts. Please, either tune statement_timeout when sending queries or use EXPLAIN ANALYZE to understand how the queries can be improved.
+        `PostgresSQL transactions are showing a high rate of statement timeouts.
+        Either tune `statement_timeou`t when sending queries or use EXPLAIN ANALYZE to understand how the queries can be improved.
         VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+        LABELS = {{ $labels }}`
 
     # 2.2.13
     # critical -> warning
@@ -179,9 +190,10 @@ groups:
       annotations:
         summary: PostgresSQL high rate deadlock (instance {{ $labels.instance }})
         description: |
-        PostgresSQL detected deadlocks. More details can be obtained through the pg_locks view.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgresSQL detected deadlocks.
+          More details can be obtained through the pg_locks view.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.14
     # warning -> info
@@ -193,9 +205,10 @@ groups:
       annotations:
         summary: PostgresSQL unused replication slot (instance {{ $labels.instance }})
         description: |
-        Unused Replication Slots. Please check if a replica is not using any of them before deleting it.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          Unused replication slots.
+          Check if a replica is not using any of them before deleting it.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.15
     - alert: PostgresqlTooManyDeadTuples
@@ -206,9 +219,10 @@ groups:
       annotations:
         summary: PostgresSQL too many dead tuples (instance {{ $labels.instance }})
         description: |
-        PostgreSQL dead tuples is too large. Please double-check your VACUUM settings.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgreSQL dead tuples is too large.
+          Double-check your VACUUM settings.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.16
     - alert: PostgresqlConfigurationChanged
@@ -219,9 +233,9 @@ groups:
       annotations:
         summary: PostgresSQL configuration changed (instance {{ $labels.instance }})
         description: |
-        PostgresSQL Database configuration change has occurred
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          PostgresSQL database configuration has changed.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.17
     # critical -> warning
@@ -233,10 +247,10 @@ groups:
       annotations:
         summary: PostgresSQL SSL compression active (instance {{ $labels.instance }})
         description: |
-        Database connections with SSL compression enabled. This may add significant jitter in replication delay.
-        Replicas should turn off SSL compression via `sslcompression=0` in `recovery.conf`.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          Database connections with SSL compression enabled. This may add significant jitter in replication delay.
+          Replicas should turn off SSL compression via `sslcompression=0` in `recovery.conf`.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.18
     # critical -> warning
@@ -248,10 +262,10 @@ groups:
       annotations:
         summary: Postgresql too many locks acquired (instance {{ $labels.instance }})
         description: |
-        Too many locks acquired on the database.
-        If this alert happens frequently, you may need to increase the PostgresSQL setting `max_locks_per_transaction`.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          Too many locks acquired on the database.
+          If this alert happens frequently, you may need to increase the PostgresSQL setting max_locks_per_transaction.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.19
     - alert: PostgresqlBloatIndexHigh(>80%)
@@ -262,10 +276,10 @@ groups:
       annotations:
         summary: Postgresql bloat index high (> 80%) (instance {{ $labels.instance }})
         description: |
-        The index {{ $labels.idxname }} is bloated.
-        You should execute `REINDEX INDEX CONCURRENTLY {{ $labels.idxname }};`
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          The index {{ $labels.idxname }} is bloated.
+          You should execute `REINDEX INDEX CONCURRENTLY {{ $labels.idxname }};`
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.20
     - alert: PostgresqlBloatTableHigh(>80%)
@@ -276,10 +290,10 @@ groups:
       annotations:
         summary: PostgresSQL bloat table high (> 80%) (instance {{ $labels.instance }})
         description: |
-        The table {{ $labels.relname }} is bloated.
-        You should execute `VACUUM {{ $labels.relname }};`
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          The table {{ $labels.relname }} is bloated.
+          You should execute `VACUUM {{ $labels.relname }};`
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.2.21
     # warning -> critical
@@ -291,7 +305,7 @@ groups:
       annotations:
         summary: PostgresSQL invalid index (instance {{ $labels.instance }})
         description: |
-        The table {{ $labels.relname }} has an invalid index: {{ $labels.indexrelname }}.
-        You should execute `DROP INDEX {{ $labels.indexrelname }};`
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}
+          The table {{ $labels.relname }} has an invalid index: {{ $labels.indexrelname }}.
+          You should execute `DROP INDEX {{ $labels.indexrelname }};`
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
