--- a/src/prometheus_alert_rules/patroni_rules.yaml
+++ b/src/prometheus_alert_rules/patroni_rules.yaml
@@ -14,10 +14,10 @@ groups:
       annotations:
         summary: Patroni PostgreSQL is down (instance {{ $labels.instance }})
         description: |
-        `A Patroni PostgreSQL instance is down.
-        Check for errors in the Loki logs.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}`
+          A Patroni PostgreSQL instance is down.
+          Check for errors in the Loki logs.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
 
     # 2.4.1
     - alert: PatroniHasNoLeader
@@ -28,7 +28,7 @@ groups:
       annotations:
         summary: Patroni has no Leader (instance {{ $labels.instance }})
         description: |
-        `A leader node (neither primary nor standby) cannot be found inside the cluster {{ $labels.scope }}.
-        Check for errors in the Loki logs.
-        VALUE = {{ $value }}
-        LABELS = {{ $labels }}`
+          A leader node (neither primary nor standby) cannot be found inside the cluster {{ $labels.scope }}.
+          Check for errors in the Loki logs.
+          VALUE = {{ $value }}
+          LABELS = {{ $labels }}
