--- a/src/prometheus_alert_rules/patroni_rules.yaml
+++ b/src/prometheus_alert_rules/patroni_rules.yaml
@@ -12,11 +12,9 @@ groups:
       labels:
         severity: critical
       annotations:
-        summary: Patroni PostgreSQL is down (instance {{ $labels.instance }})
+        summary: Patroni PostgreSQL instance {{ $labels.instance }} is down.
         description: |
-          A Patroni PostgreSQL instance is down.
           Check for errors in the Loki logs.
-          VALUE = {{ $value }}
           LABELS = {{ $labels }}
 
     # 2.4.1
@@ -26,9 +24,8 @@ groups:
       labels:
         severity: critical
       annotations:
-        summary: Patroni has no Leader (instance {{ $labels.instance }})
+        summary: Patroni instance {{ $labels.instance }} has no leader node. 
         description: |
           A leader node (neither primary nor standby) cannot be found inside the cluster {{ $labels.scope }}.
           Check for errors in the Loki logs.
-          VALUE = {{ $value }}
           LABELS = {{ $labels }}
