Update tox.ini to skip checks on alert rules

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ commands_pre =
     poetry install --only lint,format --no-root
 commands =
     poetry check --lock
-    poetry run codespell {[vars]all_path}
+    poetry run codespell {[vars]all_path} --skip {tox_root}/src/prometheus_alert_rules
     poetry run ruff check {[vars]all_path}
     poetry run ruff format --check --diff {[vars]all_path}
     find {[vars]all_path} -type f \( -name "*.sh" -o -name "*.bash" \) -exec poetry run shellcheck --color=always \{\} +
